--- a/cardeditor.css
+++ b/cardeditor.css
@@ -128,7 +128,7 @@ input[type="file"] {
 .label-btn {
 	border: var(--border-default);
 	margin: 0;
-	font-size: 1.5em;
+	font-size: 1.4em;
 	padding: 0.25em 0.5em;
 	cursor: pointer;
 	display: inline-block;
@@ -480,8 +480,11 @@ input[type="file"] {
 }
 
 .detail-box {
+	flex: 0.49 1 0%;
+	height: fit-content;
+	flex-direction: column;
+	min-height: 438.2px;
 	width: 375px;
-	height: 435px;
 	border: var(--border-default);
 	background-color: var(--bg-detail-box);
 	border-radius: 3%;
