--- a/cardeditor.css
+++ b/cardeditor.css
@@ -274,8 +274,8 @@ input[type="file"] {
 	width: 45px;
 	align-self: center;
 	padding-bottom: 1em;
-	left: 96px;
-	position: absolute;
+	position: relative;
+	padding-right: 0.75em;
 }
 
 .detail-description {
@@ -359,11 +359,11 @@ input[type="file"] {
 }
 
 .bloontonium-cost-container {
-	position: relative;
+	position: absolute;
 	font-size: 2em;
-	left: -4px;
+	left: -62px;
 	top: 14px;
-	width: 12%;
+	width: 55px;
 	text-align: center;
 }
 .hero-name-banner {
@@ -397,9 +397,16 @@ input[type="file"] {
 	display: inline-block;
 }
 
+.ability-title-text-container {
+	margin-right: 0em 0.25em;
+	font-size: 1.225em;
+	position: relative;
+	display: inline-block;
+}
+
 .hero-name-container {
-	padding-top: 0.75em;
-	padding-bottom: 0.8em;
+	margin-top: 24px;
+	margin-bottom: 25.6px;
 	font-size: 2em;
 	position: relative;
 	display: inline-block;
