--- a/cardeditor.css
+++ b/cardeditor.css
@@ -397,11 +397,12 @@ input[type="file"] {
 	display: inline-block;
 }
 
-.ability-title-text-container {
+.ability-text-container {
 	margin-right: 0em 0.25em;
 	font-size: 1.225em;
 	position: relative;
 	display: inline-block;
+	max-width: 270px;
 }
 
 .hero-name-container {
