--- a/cardeditor.css
+++ b/cardeditor.css
@@ -365,7 +365,7 @@ input[type="file"] {
 	left: 7.5%;
 	width: 85%;
 	max-height: 30%;
-	bottom: 375px;
+	bottom: 45.25%;
 }
 
 .bloontonium-cost-container {
@@ -429,7 +429,7 @@ input[type="file"] {
 	transform: translate(-50%, -50%);
 	font-size: 2.3em;
 	left: 50%;
-	top: 60%;
+	top: 56%;
 	width: 90%;
 	max-height: 20%;
 }
@@ -473,8 +473,8 @@ input[type="file"] {
 	transform: translate(-50%, -50%);
 	font-weight: 600;
 	left: 49.8%;
-	top: 78.5%;
-	font-size: 2.7em;
+	top: 74%;
+	font-size: 3.2em;
 	color: var(--text-main);
 	text-align: center;
 	width: 85%;
