--- a/cardeditor.css
+++ b/cardeditor.css
@@ -203,7 +203,7 @@ input[type="file"] {
 }
 
 .card-border {
-	transform: translate(0% -0.8%);
+	transform: translate(0%, -0.8%);
 }
 
 .cost {
@@ -259,7 +259,7 @@ input[type="file"] {
 	position: absolute;
 	transform: translate(-50%, -50%);
 	left: 50%;
-	top: 96.5%
+	top: 96%
 }
 
 .hero-pin {
@@ -274,7 +274,7 @@ input[type="file"] {
 	position: absolute;
 	transform: translate(-50%, -50%);
 	left: 7%;
-	top: 24.5%;
+	top: 24%;
 }
 
 .keyword-img {
