--- a/cardeditor.css
+++ b/cardeditor.css
@@ -280,6 +280,8 @@ input[type="file"] {
 .keyword-img {
 	width: 30px;
 	object-fit: contain;
+	margin-left: 3px;
+	margin-right: 3px;
 }
 
 .ability-holder {
