changed format help color

--- a/cardeditor.css
+++ b/cardeditor.css
@@ -32,10 +32,10 @@
 
 .format-help {
 	margin: 0;
-	color: #705480;
+	color: #6E607B80;
 	-webkit-text-stroke: 0;
 	display: inline-block;
-	font-size: 20px;
+	font-size: 25px;
 	position: relative;
 	left: 100px;
 	top: -5px;
