--- a/cardeditor.css
+++ b/cardeditor.css
@@ -559,6 +559,7 @@ input[type="file"] {
 	width: 85%;
 	height: auto;
 	word-break: break-word;
+	text-shadow: 0em 0.1em black;
 }
 
 .flavor-text-unused {
