--- a/cardeditor.css
+++ b/cardeditor.css
@@ -20,31 +20,59 @@
 	font-style: normal;
 }
 
-@font-face {
+/* @font-face {
 	font-family: 'Source Sans 3';
-	src: url(./src/font/SourceSans3-Semibold.ttf);
-	font-weight: normal;
+	src: url(./src/font/SourceSans3-Bold.ttf);
+	font-weight: bold;
 	font-style: normal;
 }
 
-	@font-face {
+@font-face {
 	font-family: 'Source Sans 3';
-	src: url(./src/font/SourceSans3-SemiBoldItalic.ttf);
-	font-weight: normal;
+	src: url(./src/font/SourceSans3-BoldItalic.ttf);
+	font-weight: bold;
+	font-style: italic;
+} */
+
+@font-face {
+	font-family: 'Source Sans 3';
+	src: url(./src/font/SourceSans3-Black.ttf);
+	font-weight: 900;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Source Sans 3';
+	src: url(./src/font/SourceSans3-BlackItalic.ttf);
+	font-weight: 900;
 	font-style: italic;
 }
 
-	@font-face {
+@font-face {
 	font-family: 'Source Sans 3';
-	src: url(./src/font/SourceSans3-Black.ttf);
-	font-weight: bold;
+	src: url(./src/font/SourceSans3-Bold.ttf);
+	font-weight: 700;
 	font-style: normal;
 }
 
-	@font-face {
+@font-face {
 	font-family: 'Source Sans 3';
-	src: url(./src/font/SourceSans3-BlackItalic.ttf);
-	font-weight: bold;
+	src: url(./src/font/SourceSans3-BoldItalic.ttf);
+	font-weight: 700;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Source Sans 3';
+	src: url(./src/font/SourceSans3-Semibold.ttf);
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Source Sans 3';
+	src: url(./src/font/SourceSans3-SemiBoldItalic.ttf);
+	font-weight: 400;
 	font-style: italic;
 }
 
