added double bold to format help

--- a/cardeditor.css
+++ b/cardeditor.css
@@ -116,6 +116,7 @@
 	background-color: #242424D8;
 	color: #fff;
 	text-align: center;
+	font-family: 'Source Sans 3';
 	border-radius: 6px;
 	padding: 5px 0;
 	position: absolute;
