--- a/new/cardeditor.css
+++ b/new/cardeditor.css
@@ -3,7 +3,7 @@
     background-color: #36343C;
     border: 2px solid black;
     margin: auto;
-    width: 550px;
+    width: 42%;
     display: flex;
     justify-content: center;
     border-radius: 25px;
